force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount added/ removed from the budget for non-accrual entries</description>
    <inlineHelpText>The amount added/ removed from the budget for non-accrual entries</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>