force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Co_Op_Earned__c.field-meta.xml
<CustomField>
    <fullName>Co_Op_Earned__c</fullName>
    <description>The earned % applied to the revenue. Used for accrual based budgets</description>
    <inlineHelpText>The earned % applied to the revenue. Used for accrual based budgets</inlineHelpText>
    <label>Co-Op Earned %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>