force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <defaultValue>if( $RecordType.Id = &apos;012300000001reU&apos;, TODAY() + 180, null)</defaultValue>
    <description>Used to track when funds added to a budget expire and are no longer considered part of the available budget</description>
    <inlineHelpText>Set a date in the future for when funds added to the budget expire, and are no longer part of the available budget</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>