force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Period_Co_Op_Earned__c.field-meta.xml
<CustomField>
    <fullName>Period_Co_Op_Earned__c</fullName>
    <description>The co-op earned in the given budget period for the chosen account</description>
    <inlineHelpText>The co-op earned in the given budget period for the chosen account</inlineHelpText>
    <label>Period Co-Op Earned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>