force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order #</label>
    <length>150</length>
    <type>Text</type>
</CustomField>