force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Used to track status of the funds. An approval process could be implemented to update this value or simply updated manually.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>