force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>The budget entry total including both accrual and non-accrual based entries</description>
    <formula>Amount__c + Period_Co_Op_Earned__c + Prior_Period_Carry_Over__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>