force-app/main/default/objects/SFDC_Budget_Entry__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used to classify budget entries by either an addition or removal from the given budget</description>
    <formula>if( Amount__c &gt;=0, &quot;Addition&quot;, &quot;Removal&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>