force-app/main/default/objects/SFDC_Budget_Entry__c/recordTypes/Accrual.recordType-meta.xml
<RecordType>
    <fullName>Accrual</fullName>
    <active>true</active>
    <description>Used to record accrual/ co-op type budget entries</description>
    <label>Accrual</label>
</RecordType>