force-app/main/default/objects/SFDC_Budget_Entry__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Used to add/ remove discretionary funding</description>
    <label>Standard</label>
</RecordType>