force-app/main/default/objects/SFDC_Budget_Entry__c/validationRules/Amount_NE_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_NE_Zero</fullName>
    <active>true</active>
    <description>Used to control that the budget entry amount cannot be zero</description>
    <errorConditionFormula>Amount__c =0</errorConditionFormula>
    <errorMessage>The budget entry amount must be either a positive or negative number</errorMessage>
</ValidationRule>